log
Wed 24 Apr 2024 09:42:17 PM UTC: 
 tests:  0|6
total_score: 0/70
603caae
Wed 24 Apr 2024 09:56:31 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   44 |   int pos = hash(key, map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
2fd1f95
Wed 24 Apr 2024 10:07:20 PM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
cc1: all warnings being treated as errors
Compilation failed
a084263
Wed 24 Apr 2024 10:09:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:64:12: error: expected identifier or ‘(’ before ‘->’ token
   64 |     HashMap->capacity = capacity;
      |            ^~
hashmap.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4b9af42
Wed 24 Apr 2024 10:10:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:64:12: error: expected identifier or ‘(’ before ‘->’ token
   64 |     HashMap->capacity = capacity;
      |            ^~
hashmap.c:65:10: error: returning ‘long int’ from a function with return type ‘HashMap *’ {aka ‘struct HashMap *’} makes pointer from integer without a cast [-Werror=int-conversion]
   65 |   return capacity;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
34220d0
Wed 24 Apr 2024 10:15:07 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:14: error: invalid initializer
   45 |   Pair par = createPair(key, value);
      |              ^~~~~~~~~~
hashmap.c:47:59: error: comparison between pointer and integer [-Werror]
   47 |   if (map->buckets[pos] == NULL || map->buckets[pos]->key == -1){
      |                                                           ^~
hashmap.c: In function ‘createMap’:
hashmap.c:66:10: error: incompatible types when returning type ‘HashMap’ {aka ‘struct HashMap’} but ‘HashMap *’ {aka ‘struct HashMap *’} was expected
   66 |   return mapa;
      |          ^~~~
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1d46aad
